prepare propertiesutil and dbutil classes

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,6 +1,6 @@
 # Oracle Database connection properties
 
 db.url=jdbc:oracle:thin:@//localhost:1521/orcl
-db.username=your_username
-db.password=your_password
+db.username=bitebuddy
+db.password=bitebuddy
 db.driverClassName=oracle.jdbc.OracleDriver
