--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc8</artifactId>
+            <version>19.8.0.0</version> <!-- or use the version that fits your Oracle version -->
+        </dependency>
     </dependencies>
 
     <build>
