introslide and howitworks section backened code completed

--- a/src/main/resources/introPageQueries.properties
+++ b/src/main/resources/introPageQueries.properties
@@ -4,40 +4,47 @@
 introSlides.selectAll=SELECT * FROM intro_slides
 introSlides.selectById=SELECT * FROM intro_slides WHERE id = ?
 introSlides.insert=INSERT INTO intro_slides (image_name, caption, description, features, keywords) VALUES (?, ?, ?, ?, ?)
-introSlide.update=UPDATE intro_slides SET image_name = ?, caption = ?, description = ?, features = ?, keywords = ? WHERE id = ?
-introSlide.delete=DELETE FROM intro_slides WHERE id = ?
+introSlides.updateById=UPDATE intro_slides SET image_name = ?, caption = ?, description = ?, features = ?, keywords = ? WHERE id = ?
+introSlides.deleteById=DELETE FROM intro_slides WHERE id = ?
+
+#HowItWorks Queries
+howItWorks.selectAll=SELECT * FROM how_it_works
+howItWorks.selectById=SELECT * FROM how_it_works WHERE id = ?
+howItWorks.insert=INSERT INTO how_it_works (image_name, caption, description, userAction, additionalInfo, tip) VALUES (?, ?, ?, ?, ?, ?)
+howItWorks.updateById=UPDATE how_it_works SET image_name = ?, caption = ?, description = ?, userAction = ?, additionalInfo = ?, tip = ? WHERE id = ?
+howItWorks.deleteById=DELETE FROM how_it_works WHERE id = ?
 
 # OurMission Queries
 ourMission.selectAll=SELECT * FROM OurMission
 ourMission.selectById=SELECT * FROM OurMission WHERE id = ?
 ourMission.insert=INSERT INTO OurMission (image_name, caption, description) VALUES (?, ?, ?)
-ourMission.update=UPDATE OurMission SET image_name = ?, caption = ?, description = ? WHERE id = ?
-ourMission.delete=DELETE FROM OurMission WHERE id = ?
+ourMission.updateById=UPDATE OurMission SET image_name = ?, caption = ?, description = ? WHERE id = ?
+ourMission.deleteById=DELETE FROM OurMission WHERE id = ?
 
 # OurPromise Queries
 ourPromise.selectAll=SELECT * FROM OurPromise
 ourPromise.selectById=SELECT * FROM OurPromise WHERE id = ?
 ourPromise.insert=INSERT INTO OurPromise (image_name, caption, description) VALUES (?, ?, ?)
-ourPromise.update=UPDATE OurPromise SET image_name = ?, caption = ?, description = ? WHERE id = ?
-ourPromise.delete=DELETE FROM OurPromise WHERE id = ?
+ourPromise.updateById=UPDATE OurPromise SET image_name = ?, caption = ?, description = ? WHERE id = ?
+ourPromise.deleteById=DELETE FROM OurPromise WHERE id = ?
 
 # OurStory Queries
 ourStory.selectAll=SELECT * FROM OurStory
 ourStory.selectById=SELECT * FROM OurStory WHERE id = ?
 ourStory.insert=INSERT INTO OurStory (image_name, caption, description) VALUES (?, ?, ?)
-ourStory.update=UPDATE OurStory SET image_name = ?, caption = ?, description = ? WHERE id = ?
-ourStory.delete=DELETE FROM OurStory WHERE id = ?
+ourStory.updateById=UPDATE OurStory SET image_name = ?, caption = ?, description = ? WHERE id = ?
+ourStory.deleteById=DELETE FROM OurStory WHERE id = ?
 
 # OurTeam Queries
 ourTeam.selectAll=SELECT * FROM OurTeam
 ourTeam.selectById=SELECT * FROM OurTeam WHERE id = ?
 ourTeam.insert=INSERT INTO OurTeam (image_name, name, role, caption, description) VALUES (?, ?, ?, ?, ?)
-ourTeam.update=UPDATE OurTeam SET image_name = ?, name = ?, role = ?, caption = ?, description = ? WHERE id = ?
-ourTeam.delete=DELETE FROM OurTeam WHERE id = ?
+ourTeam.updateById=UPDATE OurTeam SET image_name = ?, name = ?, role = ?, caption = ?, description = ? WHERE id = ?
+ourTeam.deleteById=DELETE FROM OurTeam WHERE id = ?
 
 # OurValues Queries
 ourValue.selectAll=SELECT * FROM OurValue
 ourValue.selectById=SELECT * FROM OurValue WHERE id = ?
 ourValue.insert=INSERT INTO OurValue (image_name, caption, description) VALUES (?, ?, ?)
-ourValue.update=UPDATE OurValue SET image_name = ?, caption = ?, description = ? WHERE id = ?
-ourValue.delete=DELETE FROM OurValue WHERE id = ?
+ourValue.updateById=UPDATE OurValue SET image_name = ?, caption = ?, description = ? WHERE id = ?
+ourValue.deleteById=DELETE FROM OurValue WHERE id = ?
