completed backened code for aboutsection

--- a/src/main/resources/introPageQueries.properties
+++ b/src/main/resources/introPageQueries.properties
@@ -15,36 +15,43 @@ howItWorks.updateById=UPDATE how_it_works SET image_name = ?, caption = ?, descr
 howItWorks.deleteById=DELETE FROM how_it_works WHERE id = ?
 
 # OurMission Queries
-ourMission.selectAll=SELECT * FROM OurMission
-ourMission.selectById=SELECT * FROM OurMission WHERE id = ?
-ourMission.insert=INSERT INTO OurMission (image_name, caption, description) VALUES (?, ?, ?)
-ourMission.updateById=UPDATE OurMission SET image_name = ?, caption = ?, description = ? WHERE id = ?
-ourMission.deleteById=DELETE FROM OurMission WHERE id = ?
+ourMissions.selectAll=SELECT * FROM our_missions
+ourMissions.selectById=SELECT * FROM our_missions WHERE id = ?
+ourMissions.insert=INSERT INTO our_missions (image_name, caption, description) VALUES (?, ?, ?)
+ourMissions.updateById=UPDATE our_missions SET image_name = ?, caption = ?, description = ? WHERE id = ?
+ourMissions.deleteById=DELETE FROM our_missions WHERE id = ?
 
 # OurPromise Queries
-ourPromise.selectAll=SELECT * FROM OurPromise
-ourPromise.selectById=SELECT * FROM OurPromise WHERE id = ?
-ourPromise.insert=INSERT INTO OurPromise (image_name, caption, description) VALUES (?, ?, ?)
-ourPromise.updateById=UPDATE OurPromise SET image_name = ?, caption = ?, description = ? WHERE id = ?
-ourPromise.deleteById=DELETE FROM OurPromise WHERE id = ?
+ourPromises.selectAll=SELECT * FROM our_promises
+ourPromises.selectById=SELECT * FROM our_promises WHERE id = ?
+ourPromises.insert=INSERT INTO our_promises (image_name, caption, description) VALUES (?, ?, ?)
+ourPromises.updateById=UPDATE our_promises SET image_name = ?, caption = ?, description = ? WHERE id = ?
+ourPromises.deleteById=DELETE FROM our_promises WHERE id = ?
 
 # OurStory Queries
-ourStory.selectAll=SELECT * FROM OurStory
-ourStory.selectById=SELECT * FROM OurStory WHERE id = ?
-ourStory.insert=INSERT INTO OurStory (image_name, caption, description) VALUES (?, ?, ?)
-ourStory.updateById=UPDATE OurStory SET image_name = ?, caption = ?, description = ? WHERE id = ?
-ourStory.deleteById=DELETE FROM OurStory WHERE id = ?
+ourStoryParts.selectAll=SELECT * FROM our_story
+ourStoryParts.selectById=SELECT * FROM our_story WHERE id = ?
+ourStoryParts.insert=INSERT INTO our_story (image_name, caption, description) VALUES (?, ?, ?)
+ourStoryParts.updateById=UPDATE our_story SET image_name = ?, caption = ?, description = ? WHERE id = ?
+ourStoryParts.deleteById=DELETE FROM our_story WHERE id = ?
 
 # OurTeam Queries
-ourTeam.selectAll=SELECT * FROM OurTeam
-ourTeam.selectById=SELECT * FROM OurTeam WHERE id = ?
-ourTeam.insert=INSERT INTO OurTeam (image_name, name, role, caption, description) VALUES (?, ?, ?, ?, ?)
-ourTeam.updateById=UPDATE OurTeam SET image_name = ?, name = ?, role = ?, caption = ?, description = ? WHERE id = ?
-ourTeam.deleteById=DELETE FROM OurTeam WHERE id = ?
+ourTeamMembers.selectAll=SELECT * FROM our_team
+ourTeamMembers.selectById=SELECT * FROM our_team WHERE id = ?
+ourTeamMembers.insert=INSERT INTO our_team (image_name, name, role, caption, description) VALUES (?, ?, ?, ?, ?)
+ourTeamMembers.updateById=UPDATE our_team SET image_name = ?, name = ?, role = ?, caption = ?, description = ? WHERE id = ?
+ourTeamMembers.deleteById=DELETE FROM our_team WHERE id = ?
 
 # OurValues Queries
-ourValue.selectAll=SELECT * FROM OurValue
-ourValue.selectById=SELECT * FROM OurValue WHERE id = ?
-ourValue.insert=INSERT INTO OurValue (image_name, caption, description) VALUES (?, ?, ?)
-ourValue.updateById=UPDATE OurValue SET image_name = ?, caption = ?, description = ? WHERE id = ?
-ourValue.deleteById=DELETE FROM OurValue WHERE id = ?
+ourValues.selectAll=SELECT * FROM our_values
+ourValues.selectById=SELECT * FROM our_values WHERE id = ?
+ourValues.insert=INSERT INTO our_values (image_name, caption, description) VALUES (?, ?, ?)
+ourValues.updateById=UPDATE our_values SET image_name = ?, caption = ?, description = ? WHERE id = ?
+ourValues.deleteById=DELETE FROM our_values WHERE id = ?
+
+# WhyChooseUs Queries
+whyChooseUs.selectAll=SELECT * FROM why_choose_us
+whyChooseUs.selectById=SELECT * FROM why_choose_us WHERE id = ?
+whyChooseUs.insert=INSERT INTO why_choose_us (image_name, caption, description) VALUES (?, ?, ?)
+whyChooseUs.updateById=UPDATE why_choose_us SET image_name = ?, caption = ?, description = ? WHERE id = ?
+whyChooseUs.deleteById=DELETE FROM why_choose_us WHERE id = ?
