completed backened code for service layer for intro page

--- a/src/main/resources/introPageQueries.properties
+++ b/src/main/resources/introPageQueries.properties
@@ -29,18 +29,18 @@ ourPromises.updateById=UPDATE our_promises SET image_name = ?, caption = ?, desc
 ourPromises.deleteById=DELETE FROM our_promises WHERE id = ?
 
 # OurStory Queries
-ourStoryParts.selectAll=SELECT * FROM our_story
-ourStoryParts.selectById=SELECT * FROM our_story WHERE id = ?
-ourStoryParts.insert=INSERT INTO our_story (image_name, caption, description) VALUES (?, ?, ?)
-ourStoryParts.updateById=UPDATE our_story SET image_name = ?, caption = ?, description = ? WHERE id = ?
-ourStoryParts.deleteById=DELETE FROM our_story WHERE id = ?
+ourStoryParts.selectAll=SELECT * FROM our_story_parts
+ourStoryParts.selectById=SELECT * FROM our_story_parts WHERE id = ?
+ourStoryParts.insert=INSERT INTO our_story_parts (image_name, caption, description) VALUES (?, ?, ?)
+ourStoryParts.updateById=UPDATE our_story_parts SET image_name = ?, caption = ?, description = ? WHERE id = ?
+ourStoryParts.deleteById=DELETE FROM our_story_parts WHERE id = ?
 
 # OurTeam Queries
-ourTeamMembers.selectAll=SELECT * FROM our_team
-ourTeamMembers.selectById=SELECT * FROM our_team WHERE id = ?
-ourTeamMembers.insert=INSERT INTO our_team (image_name, name, role, caption, description) VALUES (?, ?, ?, ?, ?)
-ourTeamMembers.updateById=UPDATE our_team SET image_name = ?, name = ?, role = ?, caption = ?, description = ? WHERE id = ?
-ourTeamMembers.deleteById=DELETE FROM our_team WHERE id = ?
+ourTeamMembers.selectAll=SELECT * FROM our_team_members
+ourTeamMembers.selectById=SELECT * FROM our_team_members WHERE id = ?
+ourTeamMembers.insert=INSERT INTO our_team_members (image_name, name, role, caption, description) VALUES (?, ?, ?, ?, ?)
+ourTeamMembers.updateById=UPDATE our_team_members SET image_name = ?, name = ?, role = ?, caption = ?, description = ? WHERE id = ?
+ourTeamMembers.deleteById=DELETE FROM our_team_members WHERE id = ?
 
 # OurValues Queries
 ourValues.selectAll=SELECT * FROM our_values
@@ -55,3 +55,10 @@ whyChooseUs.selectById=SELECT * FROM why_choose_us WHERE id = ?
 whyChooseUs.insert=INSERT INTO why_choose_us (image_name, caption, description) VALUES (?, ?, ?)
 whyChooseUs.updateById=UPDATE why_choose_us SET image_name = ?, caption = ?, description = ? WHERE id = ?
 whyChooseUs.deleteById=DELETE FROM why_choose_us WHERE id = ?
+
+# CustomerReviews Queries
+customerReviews.selectAll=SELECT * FROM customer_reviews
+customerReviews.selectById=SELECT * FROM customer_reviews WHERE id = ?
+customerReviews.insert=INSERT INTO customer_reviews (customer_name, rating, review_text) VALUES (?, ?, ?)
+customerReviews.updateById=UPDATE customer_reviews SET customer_name = ?, rating = ?, review_text = ? WHERE id = ?
+customerReviews.deleteById=DELETE FROM customer_reviews WHERE id = ?
